v2.0.0.9-beta
Add listing page shows info might be lost even after save - FIXED
Favorites not adding/removing due to var rename - FIXED
Favorites not adding/removing in map info window - FIXED
Some custom fields not allowing sort by option - FIXED

v2.0.0.8-beta
Sorting options not working on archive pages - FIXED
Schema markup updated and activated - FIXED

v2.0.0.7-beta
Ninja Forms template used wrong format for to field - FIXED

v2.0.0.6-beta
If categories are removed via quick edit we try to add default category - ADDED
Quick edit screen breaks layout of columns - FIXED
CPT settings, required toggle now shown as standard - CHANGED
CPT settings, show/hide advanced settings button moved inside settings - CHANGED
CPT settings, opening one setting will now close all others - CHANGED
Email output mailto spam prevention link not working - FIXED
New setup wizard step added to install recommend plugins - ADDED

v2.0.0.5-beta
Double five star bars in dashboard activity box - FIXED
Select2 updated to v4.0.5 - CHANGED
Post badge feature implemented - CHANGED
Post images CSS and lightbox added - ADDED
New images not being added to current listings - FIXED
WP dashboard recent GD reviews block - FIXED
Ninja Forms can now be used to create contact fomrs and more (install wizard step remains) - ADDED
KLEO theme deprecated_function problem - FIXED

v2.0.0.4-beta
Tooltips on CPT settings can become stuck when adding a new field - FIXED
Search and archive pages, if no listings found, page is blank - FIXED
Added developer settings section, added setting to disable advanced settings toggle - ADDED
OSM add listing page JS error - FIXED
Autozoom not working for single marker on the map - FIXED
Export button on FireFox causes page refresh which means no access to CSV - FIXED
We now add a uncategorized category on install so you can go straight from the install wizard to add a new post - ADDED
Changing CPT name does not change taxonomies names - FIXED

v2.0.0.3-beta