@@ -348,7 +348,7 @@ class GeoDir_Admin_Setup_Wizard {
 		$this->google_maps_api_check();
 		?>
 
-		<form method="post">
+		<form id='geodir-set-default-location' method="post">
 				<?php
 				$generalSettings = new GeoDir_Settings_General();
 				$settings = $generalSettings->get_settings('location');
@@ -357,6 +357,31 @@ class GeoDir_Admin_Setup_Wizard {
 				$settings[0]['title'] = '';
 				$settings[0]['desc'] = __( 'Drag the map or the marker to set the city/town you wish to use as the default location.', 'geodirectory' );
 				GeoDir_Admin_Settings::output_fields($settings);
+
+				// check if there are already listing before saving new location
+				global $wpdb;
+				$post_types        = geodir_get_posttypes();
+				$post_types_string = implode( ",", $post_types );
+				$cpt_count   = count( $post_types );
+				$cptp        = array_fill( 0, $cpt_count, "%s" );
+				$cptp_string = implode( ",", $cptp );
+				$has_posts   = $wpdb->get_var( $wpdb->prepare( "SELECT ID FROM $wpdb->posts WHERE post_type IN ($cptp_string) LIMIT 1", $post_types_string ) );
+				if ( $has_posts ) {
+					?>
+					<script>
+						jQuery(function () {
+							var default_location_city = jQuery("#default_location_city").val();
+							jQuery(".button-next").click(function () {
+								if(default_location_city && default_location_city != jQuery("#default_location_city").val()){
+									return confirm("<?php _e("Are you sure? This can break current listings.","geodirectory");?>");
+								}
+							});
+						});
+					</script>
+					<?php
+				}
+
+
 				?>
 			<p class="gd-setup-actions step">
 				<?php $generalSettings->output_toggle_advanced(); ?>
